add link to thesis on arxiv

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p class="blocktext">
       I work on research and strategy at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum computing.
 
-      My recent phd thesis at oxford applies abstract methods (mainly from categorical algebra) to the study of quantum algorithms and protocols. Before that I worked with superconducting qubit systems at <a href="http://qulab.eng.yale.edu/" target="_blank">yale</a> and <a href="http://www.qudev.ethz.ch/" target="_blank">eth zurich.</a></br>
+      My recent <a href="http://arxiv.org/abs/1512.08062" target="_blank">phd thesis</a> at oxford applies abstract methods (mainly from categorical algebra) to the study of quantum algorithms and protocols. Before that I worked with superconducting qubit systems at <a href="http://qulab.eng.yale.edu/" target="_blank">yale</a> and <a href="http://www.qudev.ethz.ch/" target="_blank">eth zurich.</a></br>
     </p>
     <center>
     <p>
