add playlist link

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
-  <head>
+<head>
     <title>W. J. Zeng</title>
     <!-- CSS -->
     <style>
-    p {
-      font-family: "Lucida Console", Monaco, monospace;
-      font-size: 13px; line-height: 30px; -webkit-font-smoothing: antialiased;
-    }
-    p.blocktext {
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 70vw;}
-    h1 { font-family: "Lucida Console", Monaco, monospace;}
-    /*a {text-decoration: none; padding-bottom: -1px; border-bottom: 1px solid black; }*/
-    a:hover {text-decoration: none; border-bottom: 1px solid rgba(255,255,255,1); }
+        p {
+        font-family: "Lucida Console", Monaco, monospace;
+        font-size: 13px; line-height: 30px; -webkit-font-smoothing: antialiased;
+        }
+        p.blocktext {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 70vw;}
+        h1 { font-family: "Lucida Console", Monaco, monospace;}
+        /*a {text-decoration: none; padding-bottom: -1px; border-bottom: 1px solid black; }*/
+        a:hover {text-decoration: none; border-bottom: 1px solid rgba(255,255,255,1); }
     </style>
 
     <!-- Google Analytics -->
@@ -25,31 +25,44 @@
 
       ga('create', 'UA-19932157-3', 'auto');
       ga('send', 'pageview');
+
     </script>
-  </head>
+</head>
 
-  <body>
-    <center>
+<body>
+<center>
     <h1 style="padding-top:2ex">W. J. ZENG</h1>
-    </center>
-    <p class="blocktext">
-      I work on research and strategy at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum computing.
+</center>
+<p class="blocktext">
+    I work on research and strategy at <a href="http://rigetti.com" target="_blank">rigetti</a> quantum computing.
 
-      My recent <a href="http://arxiv.org/abs/1512.08062" target="_blank">phd thesis</a> at oxford applies abstract methods (mainly from categorical algebra) to the study of quantum algorithms and protocols. Before that I worked with superconducting qubit systems at <a href="http://qulab.eng.yale.edu/" target="_blank">yale</a> and <a href="http://www.qudev.ethz.ch/" target="_blank">eth zurich.</a></br>
-    </p>
-    <center>
+    My recent <a href="http://arxiv.org/abs/1512.08062" target="_blank">phd thesis</a> at oxford applies abstract
+    methods (mainly from categorical algebra) to the study of quantum algorithms and protocols. Before that I worked
+    with superconducting qubit systems at <a href="http://qulab.eng.yale.edu/" target="_blank">yale</a> and <a
+        href="http://www.qudev.ethz.ch/" target="_blank">eth zurich.</a></br>
+</p>
+<center>
     <p>
-      <a href="https://medium.com/@rigetticomputing/the-quantum-software-challenge-1a86eec1ce47" target="_blank">quantumsoftwarepost</a>........medium</br>
-      <a href="http://arxiv.org/a/zeng_w_1.html" target="_blank">academicpapers</a>.............arxiv </br>
-      <a href="https://medium.com/@wjzeng" target="_blank">shortfiction</a>...............medium<i class="fa fa-medium"></i></br>
-      <a href="https://twitter.com/wjzeng" target="_blank">twitter</a>.......................42.<i class="fa fa-twitter"></i></br>
-      <a href="http://rtuniverse.tumblr.com/" target="_blank">rtuniverse</a>....................42.<i class="fa fa-tumblr"></i></br>
+        <a href="http://arxiv.org/a/zeng_w_1.html" target="_blank">academicpapers</a>.............arxiv </br>
+        <a href="https://twitter.com/wjzeng" target="_blank">links</a>.....................twitter<i
+            class="fa fa-twitter"></i></br>
+        <a href="https://medium.com/@rigetticomputing/the-quantum-software-challenge-1a86eec1ce47" target="_blank">
+            quantumsoftwarepost</a>........medium</br>
+        <a href="https://medium.com/@wjzeng" target="_blank">shortfiction</a>...............medium<i
+            class="fa fa-medium"></i></br>
+        <a href="https://goo.gl/cLuZij" target="_blank">currentlylistening</a>..........music<i
+            class="fa fa-medium"></i></br>
+        <a href="http://rtuniverse.tumblr.com/" target="_blank">rtuniverse</a>....................42.<i
+            class="fa fa-tumblr"></i></br>
     </p>
     <!-- Twitter Widget -->
-    <a class="twitter-timeline" height="300" width="80wv" data-chrome="nofooter noscrollbar noborders transparent noheader" href="https://twitter.com/wjzeng" data-widget-id="560203309668380672">Tweets by @wjzeng</a>
+    <a class="twitter-timeline" height="300" width="80wv"
+       data-chrome="nofooter noscrollbar noborders transparent noheader" href="https://twitter.com/wjzeng"
+       data-widget-id="560203309668380672">Tweets by @wjzeng</a>
     <script>
       !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+
     </script>
-    </center>
-  </body>
+</center>
+</body>
 </html>
