fix broken link

--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
       <a href="https://twitter.com/wjzeng" target="_blank">
       links</a>....................twitter<i class="fa fa-twitter">
       </i></br>
-      <a href="https://medium.com/@rigetticomputing/the-quantum-software-
-      challenge-1a86eec1ce47" target="_blank">
-      quantumsoftwarepost</a>........medium</br>
+      <a href="https://medium.com/@rigetticomputing/the-quantum-software-challenge-1a86eec1ce47"
+      target="_blank">quantumsoftwarepost</a>........medium</br>
       <a href="https://medium.com/@wjzeng" target="_blank">
       shortfiction</a>...............medium<i class="fa fa-medium"></i></br>
       <a href="https://goo.gl/cLuZij" target="_blank">
