--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
       <a href="https://twitter.com/wjzeng" target="_blank">
       links</a>....................twitter<i class="fa fa-twitter">
       </i></br>
+      A Practical Quantum Instruction Set Architecture 
+      [<a href="https://medium.com/@rigetticomputing/introducing-quil-a-practical-quantum-instruction-set-architecture-a684f0590a0c#.kicrxhl4b" target="_blank">blogpost</a>] 
+      [<a href="http://arxiv.org/abs/1608.03355" target="_blank">whitepaper</a>]</a></br>
       <a href="https://medium.com/@rigetticomputing/the-quantum-software-challenge-1a86eec1ce47"
       target="_blank">quantumsoftwarepost</a>........medium</br>
       <a href="https://medium.com/@wjzeng" target="_blank">
