update paper links

--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
       </br>
 
       <!-- Links!list -->
+      A Functional Architecture for Scalable Quantum Computing
+      [<a href="http://ieeexplore.ieee.org/document/7738703/" target="_blank">IEEE Conference Paper</a>] </br>
+      Quantum Algorithms for Compositional Natural Language Processing
+      [<a href="https://arxiv.org/abs/1608.01406" target="_blank">EPTCS Publication</a>] </br>
       <a href="http://arxiv.org/a/zeng_w_1.html" target="_blank">
-      academicpapers</a>.............arxiv </br>
+      more.academic.papers</a>.............arxiv </br>
       <a href="https://twitter.com/wjzeng" target="_blank">
       links</a>....................twitter<i class="fa fa-twitter">
       </i></br>
@@ -75,7 +79,7 @@
       [<a href="https://medium.com/@rigetticomputing/introducing-quil-a-practical-quantum-instruction-set-architecture-a684f0590a0c#.kicrxhl4b" target="_blank">blogpost</a>] 
       [<a href="http://arxiv.org/abs/1608.03355" target="_blank">whitepaper</a>]</a></br>
       <a href="https://medium.com/@rigetticomputing/the-quantum-software-challenge-1a86eec1ce47"
-      target="_blank">quantumsoftwarepost</a>........medium</br>
+      target="_blank">introducing.the.quantum.software.challenge</a>...medium</br>
       <a href="https://medium.com/@wjzeng" target="_blank">
       shortfiction</a>...............medium<i class="fa fa-medium"></i></br>
       <a href="https://goo.gl/cLuZij" target="_blank">
