update to proper postings list, added talk links and forest info

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             max-width: 70vw;
         }
 
+        p.blocktext.abstract {
+            line-height:16px;
+        }
+
         h1 {
             font-family: "Lucida Console", Monaco, monospace;
         }
@@ -53,59 +57,291 @@
         <h1 style="padding-top:2ex">W. J. ZENG</h1>
     </center>
     <p class="blocktext">
+        <!-- About -->
+        I work on research, development and strategy at
+        <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
+        computing. I am driven to make quantum computing <i>useful</i>.
+        <br>
 
-      <!-- About -->
-      I work on research and strategy at
-      <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
-      computing. My recent <a href="http://arxiv.org/abs/1512.08062"
-      target="_blank"> phd thesis</a> at oxford applies abstract methods
-      (mainly from categorical algebra) to the study of quantum algorithms
-      and protocols. Before that I worked with superconducting qubit systems
-      at <a href="http://qulab.eng.yale.edu/" target="_blank">yale</a> and
-      <a href="http://www.qudev.ethz.ch/" target="_blank">eth zurich.</a>
-      </br>
+        <!-- Links --> |
+        <a href="https://twitter.com/wjzeng" target="_blank">twitter</a> |
+        <a href="https://www.linkedin.com/in/zengwill/" target="_blank">linkedin </a> |
+        <a href="https://arxiv.org/a/zeng_w_1.html" target="_blank">arXiv</a> |
+        <a href="https://goo.gl/cLuZij" target="_blank">currently listening</a> |
+        <br><br>
 
-      <!-- Links!list -->
-      ....................................</br>
-      A Functional Architecture for Scalable Quantum Computing
-      [<a href="http://ieeexplore.ieee.org/document/7738703/" target="_blank">IEEE Conference Paper</a>] </br>
-      Quantum Algorithms for Compositional Natural Language Processing
-      [<a href="https://arxiv.org/abs/1608.01406" target="_blank">EPTCS Publication</a>] </br>
-      <a href="http://arxiv.org/a/zeng_w_1.html" target="_blank">
-      more.academic.papers</a>.............arxiv </br>
-      <a href="https://twitter.com/wjzeng" target="_blank">
-      links</a>....................twitter<i class="fa fa-twitter">
-      </i></br>
-      A Practical Quantum Instruction Set Architecture 
-      [<a href="https://medium.com/@rigetticomputing/introducing-quil-a-practical-quantum-instruction-set-architecture-a684f0590a0c#.kicrxhl4b" target="_blank">blogpost</a>] 
-      [<a href="http://arxiv.org/abs/1608.03355" target="_blank">whitepaper</a>]</a></br>
-      <a href="https://medium.com/@rigetticomputing/the-quantum-software-challenge-1a86eec1ce47"
-      target="_blank">introducing.the.quantum.software.challenge</a>...medium</br>
-      <a href="https://medium.com/@wjzeng" target="_blank">
-      shortfiction</a>...............medium<i class="fa fa-medium"></i></br>
-      <a href="https://goo.gl/cLuZij" target="_blank">
-      currentlylistening</a>..........music<i class="fa fa-medium"></i></br>
-      <a href="http://rtuniverse.tumblr.com/" target="_blank">
-      rtuniverse</a>.....................42<i class="fa fa-tumblr"></i></br>
-      </br>
+        I'm a co-founder of the
+        <a href="https://forest.rigetti.com" target="_blank">forest</a>
+        experimental quantum programming toolkit, including the open source libraries
+        <a href="https://github.com/rigetticomputing/pyquil" target="_blank">pyquil</a>
+        and
+        <a href="https://github.com/rigetticomputing/grove" target="_blank">grove</a>.
+        My
+        <a href="http://arxiv.org/abs/1512.08062" target="_blank"> phd thesis</a>
+        at oxford applies abstract methods (mainly from categorical algebra) to the
+        study of quantum algorithms and protocols. Before that I worked with superconducting
+        qubit systems at
+        <a href="http://qulab.eng.yale.edu/" target="_blank">yale</a>
+        and
+        <a href="http://www.qudev.ethz.ch/" target="_blank">eth zurich.</a>
+        <br>
+    </p>
 
-      <!-- Twitter Widget -->
-      <a class="twitter-timeline" height="1000" width="80wv"
-        data-chrome="nofooter noscrollbar noborders transparent noheader"
-        href="https://twitter.com/wjzeng" data-widget-id="560203309668380672">
-        Tweets by @wjzeng</a>
-      <script>
-        ! function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0],
-                p = /^http:/.test(d.location) ? 'http' : 'https';
-            if (!d.getElementById(id)) {
-                js = d.createElement(s);
-                js.id = id;
-                js.src = p + "://platform.twitter.com/widgets.js";
-                fjs.parentNode.insertBefore(js, fjs);
-            }
-        }(document, "script", "twitter-wjs");
-      </script>
+
+    <!-- Posts -->
+    <p class="blocktext">
+        .................................... <br>
+        <b>Quantum Programming on Near-term Devices</b>
+        [<a href="http://willzeng.com/shared/QuantumProgrammingMURITalk_2015.pdf" target="_blank">slides</a>]
+        #talk
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                29 November, 2016
+                <br><br>
+                Simons Institute, University of Berkeley, CA -
+                Invited talk at the Semantics, Formal Reasoning, and Tools for Quantum Programming
+                <a href="http://www.cs.tulane.edu/quantum/" target="_blank">MURI Review</a>.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>A Functional Architecture for Scalable Quantum Computing</b>
+        [<a href="http://ieeexplore.ieee.org/document/7738703/" target="_blank">IEEE</a>]
+        [<a href="http://willzeng.com/shared/functional_architecture_final_ICRC.pdf" target="_blank">direct download</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                17 October, 2016
+                <br><br>
+                Quantum computing devices based on superconducting quantum circuits have rapidly
+                developed in the last few years. The building blocks-superconducting qubits, quantum-limited
+                amplifiers, and two-qubit gates-have been demonstrated by several groups. Small prototype
+                quantum processor systems have been implemented with performance adequate to demonstrate
+                quantum chemistry simulations, optimization algorithms, and enable experimental tests of
+                quantum error correction schemes. A major bottleneck in the effort to develop larger systems
+                is the need for a scalable functional architecture that combines all the core building blocks
+                in a single, scalable technology. We describe such a functional architecture, based on a planar
+                lattice of transmon and fluxonium qubits, parametric amplifiers, and a novel fast DC
+                controlled two-qubit gate.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>A Practical Quantum Instruction Set Architecture</b>
+        [<a href="https://arxiv.org/abs/1608.03355" target="_blank">arXiv</a>]
+        [<a href="https://medium.com/@rigetticomputing/introducing-quil-a-practical-quantum-instruction-set-architecture-a684f0590a0c#.ykdjofqqb" target="_blank">blogpost</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                11 August, 2016
+                <br><br>
+                We introduce an abstract machine architecture for classical/quantum
+                computations---including compilation---along with a quantum instruction
+                language called Quil for explicitly writing these computations. With this formalism,
+                we discuss concrete implementations of the machine and non-trivial algorithms
+                targeting them. The introduction of this machine dovetails with ongoing development of
+                quantum computing technology, and makes possible portable descriptions of recent
+                classical/quantum algorithms.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>Quantum Algorithms for Compositional Natural Language Processing</b>
+        [<a href="https://arxiv.org/abs/1608.01406" target="_blank">EPTCS</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                4 August, 2016
+                <br><br>
+                We propose a new application of quantum computing to the field of natural
+                language processing. Ongoing work in this field attempts to incorporate
+                grammatical structure into algorithms that compute meaning. In (Coecke,
+                Sadrzadeh and Clark, 2010), the authors introduce such a model (the CSC model)
+                based on tensor product composition. While this algorithm has many advantages,
+                its implementation is hampered by the large classical computational resources
+                that it requires. In this work we show how computational shortcomings of the CSC
+                approach could be resolved using quantum computation (possibly in addition to
+                existing techniques for dimension reduction). We address the value of quantum
+                RAM (Giovannetti,2008) for this model and extend an algorithm from Wiebe, Braun
+                and Lloyd (2012) into a quantum algorithm to categorize sentences in CSC. Our new
+                algorithm demonstrates a quadratic speedup over classical methods under certain conditions.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>High-threshold decoding algorithms for the gauge color code</b>
+        [<a href="http://willzeng.com/shared/MCMC_GCC_aps2015.pdf" target="_blank">slides</a>]
+        #talk
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                16 March, 2016
+                <br><br>
+                Baltimore, MD -
+                APS March Meeting 2016
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>The Abstract Structure of Quantum Algorithms</b>
+        [<a href="https://arxiv.org/abs/1512.08062" target="_blank">Oxford Thesis</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                26 December, 2015
+                <br><br>
+                Quantum information brings together theories of physics and computer science. This
+                synthesis challenges the basic intuitions of both fields. In this thesis, we show that
+                adopting a unified and general language for process theories advances foundations and
+                practical applications of quantum information. Our first set of results analyze quantum
+                algorithms with a process theoretic structure. We contribute new constructions of the Fourier
+                transform and Pontryagin duality in dagger symmetric monoidal categories. We then use this
+                setting to study generalized unitary oracles and give a new quantum blackbox algorithm for
+                the identification of group homomorphisms, solving the GROUPHOMID problem. In the remaining
+                section, we construct a novel model of quantum blackbox algorithms in non-deterministic
+                classical computation. Our second set of results concerns quantum foundations. We complete
+                work begun by Coecke et al., definitively connecting the Mermin non-locality of a process
+                theory with a simple algebraic condition on that theory's phase groups. This result allows
+                us to offer new experimental tests for Mermin non-locality and new protocols for quantum secret
+                sharing. In our final chapter, we exploit the shared process theoretic structure of quantum
+                information and distributional compositional linguistics. We propose a quantum algorithm adapted
+                from Weibe et al. to classify sentences by meaning. The clarity of the process theoretic setting
+                allows us to recover a speedup that is lost in the naive application of the algorithm. The main
+                mathematical tools used in this thesis are group theory (esp. Fourier theory on finite groups),
+                monoidal category theory, and categorical algebra.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>Contextuality and the Weak Axiom in the Theory of Choice</b>
+        [<a href="https://arxiv.org/abs/1512.02668" target="_blank">Proc. Quantum Inter.</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                23 November, 2015
+                <br><br>
+                Recent work on the logical structure of non-locality has constructed scenarios
+                where observations of multi-partite systems cannot be adequately described by
+                compositions of non-signaling subsystems. In this paper we apply these frameworks
+                to economics. First we construct a empirical model of choice, where choices are
+                understood as observable outcomes in a certain sense. An analysis of contextuality
+                within this framework allows us to characterize which scenarios allow for the possible
+                construction of an adequate global choice rule. In essence, we mathematically
+                characterize when it makes sense to consider the choices of a group as composed of
+                individual choices. We then map out the logical space of some relevant empirical
+                principles, relating properties of these contextual choice scenarios to no-signalling
+                theories and to the weak axiom of revealed preference.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>The Quantum Software Challenge</b>
+        [<a href="https://medium.com/@rigetticomputing/the-quantum-software-challenge-1a86eec1ce47#.275n8ufgk" target="_blank">Medium</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                19 October, 2015
+                <br><br>
+                What software engineers should know about quantum computing...
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>Diagrammatic Methods for the Specifcation and Verifcation of Quantum Algorithms</b>
+        [<a href="http://willzeng.com/shared/qcircuitworkshop.pdf" target="_blank">slides</a>] #talk
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                9 June, 2015 <br><br>
+                Institute for Quantum Computing, University of Waterloo -
+                Quantum Programming and Circuits Workshop
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>sticks</b>
+        [<a href="https://medium.com/@wjzeng/sticks-1d50f0686b64#.syc7081nc" target="_blank">Medium</a>] #fiction
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                7 Feburary, 2015
+                <br><br>
+                In earlier years, we would hold small angled sticks...
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>see</b>
+        [<a href="https://medium.com/@wjzeng/see-57dab42cfe4b#.a1oj7yrfp" target="_blank">Medium</a>] #fiction
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                27 January, 2015
+                <br><br>
+                See that little in the weathered man’s life could match the intensity, the panting rhythms,
+                the speed of the sled dogs...
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>Abstract structure of unitary oracles for quantum algorithms</b>
+        [<a href="http://willzeng.com/shared/qpltalk_unitary_2014.pdf" target="_blank">slides</a>]
+        [<a href="https://www.youtube.com/watch?v=X0cKqtGjWPY" target="_blank">video</a>]
+        #talk
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                6 June, 2014 <br><br>
+                Kyoto, Japan -
+                Quantum Physics and Logic (
+                <a href="http://www-mmm.is.s.u-tokyo.ac.jp/qpl2014/" target="_blank">QPL</a>
+                ) 2014
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <!-- Twitter Widget -->
+        <a class="twitter-timeline" height="1000" width="80wv"
+           data-chrome="nofooter noscrollbar noborders transparent noheader"
+           href="https://twitter.com/wjzeng" data-widget-id="560203309668380672">
+            Tweets by @wjzeng</a>
+        <script>
+            ! function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0],
+                    p = /^http:/.test(d.location) ? 'http' : 'https';
+                if (!d.getElementById(id)) {
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = p + "://platform.twitter.com/widgets.js";
+                    fjs.parentNode.insertBefore(js, fjs);
+                }
+            }(document, "script", "twitter-wjs");
+        </script>
     </p>
 </body>
 
