add gauge color code abstract

--- a/index.html
+++ b/index.html
@@ -187,7 +187,19 @@
                 16 March, 2016
                 <br><br>
                 Baltimore, MD -
-                APS March Meeting 2016
+                APS March Meeting 2016 <br>
+                Gauge color codes are topological quantum error correcting codes on three dimensional
+                lattices. They have garnered recent interest due to two important properties: (1) they
+                admit a universal transversal gate set, and (2) their structure allows reliable error
+                correction using syndrome data obtained from a measurement circuit of constant depth.
+                Both of these properties make gauge color codes intriguing candidates for low overhead
+                fault-tolerant quantum computation. Recent work by Brown et al. calculated a threshold
+                of ~0.31\% for a particular gauge color code lattice using a simple clustering decoder
+                and phenomenological noise. We show that we can achieve improved threshold error rates
+                using the efficient Wootton and Loss Markov-chain Monte Carlo (MCMC) decoding. In the
+                case of the surface code, the MCMC decoder produced a threshold close to that code's
+                upper bound. While no upper bound is known for gauge color codes, the thresholds we
+                present here may give a better estimate.
             </p>
         </small>
 
