add unitary oracle paper link

--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
         <b>Abstract structure of unitary oracles for quantum algorithms</b>
         [<a href="http://willzeng.com/shared/qpltalk_unitary_2014.pdf" target="_blank">slides</a>]
         [<a href="https://www.youtube.com/watch?v=X0cKqtGjWPY" target="_blank">video</a>]
+        [<a href="https://arxiv.org/abs/1406.1278" target="_blank">paper</a>]
         #talk
     </p>
         <small>
