--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@
             }(document, "script", "twitter-wjs");
         </script>
     </p>
+
+    <p class="blocktext">
+        <a href="https://www.youtube.com/watch?v=KX7V7UEVZko">Enjoy. Thanks for coming by.</a>
+    </p>
+
 </body>
 
 </html>
