--- a/index.html
+++ b/index.html
@@ -338,6 +338,19 @@
 
     <p class="blocktext">
         .................................... <br>
+        <b>A Subtle Introduction to Category Theory</b>
+        [<a href="http://willzeng.com/shared/CatIntro.pdf" target="_blank">notes</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                Spring, 2013 <br><br>
+                Some playful notes and riffs on monoidal category theory. Very much a WIP.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
         <!-- Twitter Widget -->
         <a class="twitter-timeline" height="1000" width="80wv"
            data-chrome="nofooter noscrollbar noborders transparent noheader"
