add forsale microfiction

--- a/index.html
+++ b/index.html
@@ -351,6 +351,19 @@
 
     <p class="blocktext">
         .................................... <br>
+        <b>For Sale</b>
+        [<a href="http://willzeng.com/shared/forsale.pdf" target="_blank">link</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                16 August, 2013 <br><br>
+                A microfiction.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
         <!-- Twitter Widget -->
         <a class="twitter-timeline" height="1000" width="80wv"
            data-chrome="nofooter noscrollbar noborders transparent noheader"
