fix typo in forest link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <br><br>
 
         I'm a co-founder of the
-        <a href="https://forest.rigetti.com" target="_blank">forest</a>
+        <a href="http://forest.rigetti.com" target="_blank">forest</a>
         experimental quantum programming toolkit, including the open source libraries
         <a href="https://github.com/rigetticomputing/pyquil" target="_blank">pyquil</a>
         and
