add summary of unitary oracles paper

--- a/index.html
+++ b/index.html
@@ -331,7 +331,14 @@
                 Kyoto, Japan -
                 Quantum Physics and Logic (
                 <a href="http://www-mmm.is.s.u-tokyo.ac.jp/qpl2014/" target="_blank">QPL</a>
-                ) 2014
+                ) 2014 <br>
+                We show that a pair of complementary dagger-Frobenius algebras, equipped with a
+                self-conjugate comonoid homomorphism onto one of the algebras, produce a nontrivial
+                unitary morphism on the product of the algebras. This gives an abstract
+                understanding of the structure of an oracle in a quantum computation, and we apply
+                this understanding to develop a new algorithm for the deterministic identification
+                of group homomorphisms into abelian groups. We also discuss an application to the
+                categorical theory of signal-flow networks.
             </p>
         </small>
 
