small text update to intro

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <!-- About -->
         I work on research, development and strategy at
         <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
-        computing. I am driven to make quantum computing <i>useful</i>.
+        computing. I am focused on quantum computer architecture, quantum software
+        and algorithm engineering, and making quantum computing <i>useful</i>.
         <br>
 
         <!-- Links --> |
