--- a/index.html
+++ b/index.html
@@ -107,6 +107,36 @@
     <!-- Posts -->
     <p class="blocktext">
         .................................... <br>
+        <b>Architectures for Hybrid Quantum/Classical Computing</b>
+        [<a href="http://willzeng.com/shared/ORNL_Zeng_05252017.pdf" target="_blank">slides</a>]
+        #talk
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                22 May, 2017
+                <br><br>
+                Quantum Computing Institute Seminar, Oak Ridge National Lab, TN
+                <br>
+                The first scalable universal quantum computing devices are now being designed and
+                built in several groups worldwide.  As these devices mature, it is important to
+                consider how best to make use of them.  This will require new and applied
+                programming models for quantum computing.  In particular, promising near-term
+                algorithms for quantum simulation, quantum chemistry, and optimization require a
+                hybrid quantum/classical programming environment. In this talk, we introduce an
+                open-source environment (<a href="http://forest.rigetti.com">Forest</a>) based on a
+                shared-memory intermediate
+                representation (<a href="https://arxiv.org/abs/1608.03355" target="_blank">Quil</a>).
+                The environment runs through a cloud API with client-side
+                Python libraries that can target both superconducting quantum circuit and classical
+                simulation backends.  We discuss the programming model and implementations of
+                the <a href="http://grove-docs.readthedocs.io/en/latest/qaoa.html" target="_blank">
+                Quantum Approximate Optimization Algorithm</a> in this environment.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
         <b>A Practical Quantum Programming Workshop</b>
         [<a href="https://www.youtube.com/watch?v=IpoASc18P5Q&feature=youtu.be" target="_blank">video</a>]
         #talk <br>
