add link to pyquil docs intro to qc

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         and
         <a href="http://www.qudev.ethz.ch/" target="_blank">eth zurich.</a>
         <br>
+
+        If you want to learn more about how to get started with quantum computing, I've written a
+        short introduction, which is part of the
+        <a href="http://pyquil.readthedocs.io/en/latest/intro_to_qc.html"> documentation for
+            pyQuil.</a>
     </p>
 
 
