--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <a href="https://goo.gl/cLuZij" target="_blank">currently listening</a> |
         <br><br>
 
-        I'm a co-founder of the
+        I am product lead for the
         <a href="http://forest.rigetti.com" target="_blank">forest</a>
         experimental quantum programming toolkit, including the open source libraries
         <a href="https://github.com/rigetticomputing/pyquil" target="_blank">pyquil</a>
